# Zeungine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .gitmodules~  CMakeLists.txt  README.md  auto-install.bat  unx-package.sh  win-package.bat
.github/workflows/: tag.yml
cmake/: DependenciesBuild.cmake  DependenciesTargets.cmake  Editor.cmake  FindWayland.cmake  Install.cmake  InstallPrefix.cmake  Library.cmake  Options.cmake  Package.cmake  PlatformSetup.cmake  Sources.cmake  Targets.cmake  Tests.cmake  Windower.cmake  ZeungineConfig.cmake
cmake/Dependencies/: Build.cmake  CMakeLists.txt  Install.cmake  Package.cmake  Targets.cmake
cmake/Headers/: CMakeLists.txt  Install.cmake  Package.cmake
cmake/HeadersAndAssets/: CMakeLists.txt  Install.cmake  Package.cmake
include/: Runtime.hpp  ip.hpp
include/anex/: AbstractNexus.hpp  IEntity.hpp  IGame.hpp  IScene.hpp  IWindow.hpp  Logger.hpp  RuntimeAPI.hpp  SharedLibrary.hpp  glm.hpp  utilities.hpp
include/anex/crypto/: vector.hpp
include/anex/enums/: EFileLocation.hpp
include/anex/filesystem/: Directory.hpp  File.hpp
include/anex/images/: ImageLoader.hpp
include/anex/strings/: HookedConsole.hpp  UTFIterator.hpp  Utf8Iterator.hpp
include/editor/: CodeScene.hpp  EditorScene.hpp  Hotswapper.hpp  Project.hpp
include/glad/: egl.h  gl.h  glad.h  glx.h  wgl.h
include/runtime/: WindowLoader.hpp
include/zg/: Entity.hpp  Events.hpp  IEntity.hpp  IScene.hpp  IWindow.hpp  Logger.hpp  Runtime.hpp  RuntimeAPI.hpp  Scene.hpp  SharedLibrary.hpp  Standard.hpp  Visibility.hpp  Window.hpp  common.hpp  deque.hpp  ffmpeg.hpp  pureconstcharstreamcode.hpp  queue.hpp  utilities.hpp
include/zg/audio/: AudioEngine.hpp  AudioPipeline.hpp  AudioStage.hpp  ISoundNode.hpp  audio_time_t.hpp
include/zg/crypto/: Random.hpp  vector.hpp
include/zg/editor/: CodeScene.hpp  EditorScene.hpp  Hotswapper.hpp
include/zg/entities/: AssetBrowser.hpp  Button.hpp  Console.hpp  Cube.hpp  Dialog.hpp  DropdownMenu.hpp  Input.hpp  Panel.hpp  Plane.hpp  SkyBox.hpp  StatusText.hpp  Tabs.hpp  TextView.hpp  Toolbar.hpp
include/zg/enums/: EBreakStyle.hpp  EFileLocation.hpp  ELayoutBindingType.hpp  EUniformType.hpp  ShaderType.hpp
include/zg/filesystem/: Directory.hpp  DirectoryWatcher.hpp  File.hpp
include/zg/images/: ImageLoader.hpp  SVGRasterize.hpp
include/zg/interfaces/: IEntity.hpp  IFile.hpp  IPlatformWindow.hpp  IRenderer.hpp  IScene.hpp  ISizable.hpp  IVendorRenderer.hpp  IWindow.hpp
include/zg/lights/: DirectionalLight.hpp  Lights.hpp  PointLight.hpp  SpotLight.hpp
include/zg/media/: AudioDecoder.hpp  AudioEncoder.hpp  I1xCoder.hpp  InputMediaStream.hpp  MediaStream.hpp  ReadMediaStream.hpp  VideoDecoder.hpp  VideoEncoder.hpp
include/zg/raytracing/: BVH.hpp
include/zg/renderers/: EGLRenderer.hpp  GLRenderer.hpp  MetalRenderer.hpp  VulkanRenderer.hpp
include/zg/shaders/: RuntimeConstants.hpp  Shader.hpp  ShaderFactory.hpp  ShaderManager.hpp
include/zg/strings/: HookedConsole.hpp  InFileProcessor.hpp  Utf8Iterator.hpp
include/zg/system/: Budget.hpp  Command.hpp  CommandExecutor.hpp  LinkedList.hpp  SetWorkingDirectory.hpp  TabulatedIOLogger.hpp  TerminalIO.hpp  WorkingDirectory.hpp  headerplujplusdefines.hpp
include/zg/textures/: Framebuffer.hpp  FramebufferFactory.hpp  Texture.hpp  TextureFactory.hpp  TextureLoader.hpp
include/zg/vaos/: VAO.hpp  VAOFactory.hpp
include/zg/vp/: Projection.hpp  VFBLR.hpp  VML.hpp  View.hpp
include/zg/windows/: MacOSWindow.hpp  WIN32Window.hpp  WaylandWindow.hpp  X11Window.hpp  XCBWindow.hpp
include/zg/zgfilesystem/: Directory.hpp  DirectoryWatcher.hpp  File.hpp  Serial.hpp
lib/Darwin/arm64/: libEGL.dylib  libGLESv2.dylib  libc++_chrome.dylib  libchrome_zlib.dylib  libdawn_native.dylib  libdawn_platform.dylib  libdawn_proc.dylib  libthird_party_abseil-cpp_absl.dylib
lib/Darwin/x86_64/: libGLESv2.dylib  libc++_chrome.dylib  libchrome_zlib.dylib
lib/macos/: libEGL.dylib  libc++_chrome.dylib  libchrome_zlib.dylib  libdawn_native.dylib  libdawn_platform.dylib  libdawn_proc.dylib  libthird_party_abseil-cpp_absl.dylib
src/: Entity.cpp  File.cpp  IEntity.cpp  IGame.cpp  IScene.cpp  IWindow.cpp  Logger.cpp  Scene.cpp  SharedLibrary.cpp  Window.cpp  gl.c  wgl.c
src/audio/: AudioEngine.cpp  AudioPipeline.cpp  AudioStage.cpp  ISoundNode.cpp
src/crypto/: vector.cpp
src/editor/: CodeScene.cpp  Editor.cpp  EditorScene.cpp  Hotswapper.cpp
src/entities/: AssetBrowser.cpp  Button.cpp  Console.cpp  Cube.cpp  Dialog.cpp  DropdownMenu.cpp  Input.cpp  Panel.cpp  Plane.cpp  SkyBox.cpp  StatusText.cpp  Tabs.cpp  TextView.cpp  Toolbar.cpp
src/filesystem/: Directory.cpp  DirectoryWatcher.cpp  File.cpp
src/fonts/freetype/: Freetype.cpp
src/images/: ImageLoader.cpp  SVGRasterize.cpp
src/interfaces/: IEntity.cpp  IPlatformWindow.cpp  IScene.cpp  ISizable.cpp  IWindow.cpp
src/lights/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
src/media/: AudioDecoder.cpp  AudioEncoder.cpp  I1xCoder.cpp  InputMediaStream.cpp  MediaStream.cpp  ReadMediaStream.cpp  VideoDecoder.cpp  VideoEncoder.cpp
src/media/entities/: Video.cpp
src/modules/fenster/: Fenster.cpp
src/modules/gl/: GL.cpp  GLScene.cpp  (+6 more)
src/raytracing/: BVH.cpp
src/renderers/: EGLRenderer.cpp  GLRenderer.cpp  MetalRenderer.mm  VulkanRenderer.cpp
src/shaders/: Shader.cpp  ShaderFactory.cpp  ShaderManager.cpp
src/strings/: HookedConsole.cpp  InFileProcessor.cpp
src/system/: Budget.cpp  Command.cpp  CommandExecutor.cpp  TabulatedIOLogger.cpp  TerminalIO.cpp
src/textures/: Framebuffer.cpp  FramebufferFactory.cpp  Texture.cpp  TextureFactory.cpp  TextureLoader.cpp
src/vaos/: VAO.cpp  VAOFactory.cpp
src/vp/: Projection.cpp  VFBLR.cpp  VML.cpp  View.cpp
src/windows/: MacOSWindow.cpp  MacOSWindow.mm  WIN32Window.cpp  WaylandWindow.cpp  X11Window.cpp  XCBWindow.cpp
src/zgfilesystem/: Directory.cpp  DirectoryWatcher.cpp  File.cpp
tests/: Editor.cpp  EditorGame.cpp  FensterWindow.cpp  GLTest.cpp  GLWindow.cpp  LightingTest.cpp  SimpleCubeTest.cpp  SimpleWindowTest.cpp  VideoTest.cpp  dequeTest.cpp  queueTest.cpp
(+137 files in other folders)
